# testing-alignments

./: pyproject.toml
XL-WA/: test.py
