[tool.poetry]
name = "testing-alignments"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tokenizer = "^3.4.5"
torch = "^2.4.1"
simalign = "^0.4"
tqdm = "^4.66.5"
numpy = "^2.1.2"
boto3 = "^1.35.38"
filelock = "^3.16.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
